--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<header class="major">
 										<h2>Projects</h2>
 									</header>
-									<div class="projects">
+									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Interdum aenean</h3>
@@ -223,7 +223,7 @@
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="aryaman.gupta.ece20@itbhu.ac.in">aryaman.gupta.ece20@itbhu.ac.in</a></li>
 										<li class="icon solid fa-phone">+91 97797-17444</li>
-										<li class="icon solid fa-home">33 Karan Vihar<br />
+										<li class="icon solid fa-home">33, Karan Vihar<br />
 										Karnal, Haryana, India - 132001</li>
 									</ul>
 								</section>
