--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/image.jpg" alt="" />
+										<img src="images/image.jpg" height="500" width="500"/>
 									</span>
 								</section>
 
