--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I’m Aryaman Gupta</h1>
-											<p>I am senior undergraduate of Electronics Engineering at Indian Institute of Technology (BHU), Varanasi</p>
+											<p>I am senior undergraduate of Electronics Engineering at Indian Institute of Technology (BHU), Varanasi.</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>I'm working at Dr. Somil Bansal's Safe and Intelligent Autonomy Lab on Safety-Critical Control of Autonomous Agents. I'm also working at Carleton University under Dr. Hashim Mohamed on Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</p>
+										<p>I've previously worked at Robert Bosch Center for Cyber Physical Systems under Dr. Bharadwaj Amrutur on Mult-Agent Exploration and Dynamic Obstacle Avoidance. I've also worked at Changwon National University under Dr. Oh-Seol Kwon on Joint Supe-Resolution and Object Detection.</p>
 										<ul class="actions">
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_July2023.pdf" class="button big">C.V.</a></li>
 										</ul>
