--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 											<h1>Hi, I’m Aryaman Gupta</h1>
 											<p><b>I am senior undergraduate of Electronics Engineering at Indian Institute of Technology (BHU), Varanasi.</b></p>
 										</header>
-										<p>I'm working at <a href="https://smlbansal.github.io/">Dr. Somil Bansal</a>'s <a href="https://smlbansal.github.io/sia-lab/index.html">Safe and Intelligent Autonomy Lab</a> on Safety-Critical Control of Autonomous Agents. I'm also working at Carleton University under <a href="https://carleton.ca/hhashim/">Dr. Hashim Mohamed</a> on Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</p>
-										<p>I've previously worked at <a href="https://cps.iisc.ac.in/">Robert Bosch Center for Cyber Physical Systems</a> under <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> on Mult-Agent Exploration and Dynamic Obstacle Avoidance. I've also worked at Changwon National University under <a href="http://islab.cwnu.ac.kr/professor.htm">Dr. Oh-Seol Kwon</a> on Joint Supe-Resolution and Object Detection.</p>
+										<p>I'm working at <a href="https://smlbansal.github.io/">Dr. Somil Bansal</a>'s <a href="https://smlbansal.github.io/sia-lab/index.html">Safe and Intelligent Autonomy Lab</a> on <i>Safety-Critical Control of Autonomous Agents</i>. I'm also working at Carleton University under <a href="https://carleton.ca/hhashim/">Dr. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
+										<p>I've previously worked at <a href="https://cps.iisc.ac.in/">Robert Bosch Center for Cyber Physical Systems</a> under <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>. I've also worked at Changwon National University under <a href="http://islab.cwnu.ac.kr/professor.htm">Dr. Oh-Seol Kwon</a> on <i>Joint Super-Resolution and Object Detection</i>.</p>
 										<ul class="actions">
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_July2023.pdf" class="button big">C.V.</a></li>
 										</ul>
