--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_July2023.pdf" class="button big">C.V.</a></li>
 										</ul>
 									</div>
-									<!-- <span class="image object"> -->
-										<img src="images/image.jpg" height="500" width="350"/>
-									<!-- </span> -->
+									<span class="image object">
+										<img src="images/image.jpg"/>
+									</span>
 								</section>
 
 							<!-- Section -->
