--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 									</header>
 									<!-- <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="aryaman.gupta.ece20@itbhu.ac.in">aryaman.gupta.ece20@itbhu.ac.in</a></li>
+										<li class="icon solid fa-envelope">aryaman.gupta.ece20@itbhu.ac.in</li>
 										<li class="icon solid fa-phone">+91 97797-17444</li>
 										<li class="icon solid fa-home">33, Karan Vihar<br />
 										Karnal, Haryana, India - 132001</li>
