--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 									<a href="index.html" class="logo"><strong>Aryaman</strong> Gupta</a>
 									<ul class="icons">
 										<li><a href="https://github.com/phoenixrider12" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="https://www.instagram.com/_aryaman_gupta_/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.linkedin.com/in/aryaman1210/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 									</ul>
 								</header>
