--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<header class="major">
 										<h2>News</h2>
 									</header>
-									<div class="features">
+									<!-- <div class="features"> -->
 										<article>
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -74,7 +74,7 @@
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
-									</div>
+									<!-- </div> -->
 								</section>
 
 							<!-- Section -->
