--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
 										<h2>News</h2>
 									</header>
 									<!-- <div class="features"> -->
-										<article>
+										<!-- <article> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										</article>
-										<article>
+										<!-- </article> -->
+										<!-- <article> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										</article>
-										<article>
+										<!-- </article> -->
+										<!-- <article> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										</article>
-										<article>
+										<!-- </article> -->
+										<!-- <article> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										</article>
+										<!-- </article> -->
 									<!-- </div> -->
 								</section>
 
