--- a/index.html
+++ b/index.html
@@ -53,28 +53,18 @@
 									<header class="major">
 										<h2>News</h2>
 									</header>
-									<!-- <div class="features"> -->
-										<!-- <article> -->
+											<!-- <div class="content"> -->
+												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<!-- </div> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										<!-- </article> -->
-										<!-- <article> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										<!-- </article> -->
-										<!-- <article> -->
 											<div class="content">
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										<!-- </article> -->
-										<!-- <article> -->
-											<div class="content">
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										<!-- </article> -->
-									<!-- </div> -->
 								</section>
 
 							<!-- Section -->
