--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 										<h2>News</h2>
 									</header>
 										<ul>
-												<li>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</li>
-												<li>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</li>
-												<li>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</li>
-												<li>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</li>
+												<li>[May 2023] : Started Research Internship at SIA Lab, USC.</li>
+												<li>[Jan 2023] : Started Research Internship at Carleton University.</li>
+												<li>[Dec 2022] : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG</a>.</li>
+												<li>[May 2022] : Started Research Internship at RBCCPS, IISc.</li>
+												<li>[Mar 2022] : Started Research Internship at AISL, CWNU</li>
+												<li>[Dec 2021] : First Runner Up in AIITRA Robotics Challenge</li>
+												<li>[Nov 2020] : Started B.Tech in Electronics Engineering at IIT BHU</li>
 										</ul>
 								</section>
 
