--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="#" class="image"><img src="images/aiitra.jpg" alt="" /></a>
+											<h3>Multi-Agent Warehouse Cleaning</h3>
+											<p>Efficient coverage and cleaning of unknown terrains using multiple ground robots.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/phoenixrider12/Vox-Bot" class="button">Code</a></li>
+												<li><a href="https://docs.google.com/presentation/d/15Tr9ttaVZmQwHbguTARzjeVO22R2nE5FTYrOWf2-XHw/edit?usp=sharing" class="button">Report</a></li>
 											</ul>
 										</article>
 										<article>
