--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/aiitra.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/aiitra.png" alt="" /></a>
 											<h3>Multi-Agent Warehouse Cleaning</h3>
 											<p>Efficient coverage and cleaning of unknown terrains using multiple ground robots.</p>
 											<ul class="actions">
