--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
+											<h3>UAV Control and Swarming</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/phoenixrider12/Drona_Aviation_Pluto_Swarm_Challenge" class="button">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1MfTUgXobM4bYxJc3moGjneKoeCTwPCv5/view?usp=sharing" class="button">Report</a></li>
 											</ul>
 										</article>
 										<article>
