--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>UAV Control and Swarming</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>Cascaded PID-based control and swarm motion of drones.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/phoenixrider12/Drona_Aviation_Pluto_Swarm_Challenge" class="button">Code</a></li>
 												<li><a href="https://drive.google.com/file/d/1MfTUgXobM4bYxJc3moGjneKoeCTwPCv5/view?usp=sharing" class="button">Report</a></li>
@@ -90,10 +90,11 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Multi-Purpose Household Robot</h3>
+											<p>Fabricated a ground robot to perform household chores and baby care.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/phoenixrider12/Multi-Purpose-HouseHold-Bot" class="button">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1LK5S5EnnhTdDiMbbFOUx6peoZhiU1zt4/view?usp=sharing" class="button">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -143,10 +144,10 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">News</a></li>
-										<li><a href="generic.html">Projects</a></li>
-										<li><a href="elements.html">Publications</a></li>
+										<li><a href="#">Homepage</a></li>
+										<li><a href="#">News</a></li>
+										<li><a href="#">Projects</a></li>
+										<li><a href="#">Publications</a></li>
 										<!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
