--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Small World IoT Networks</h3>
+											<p>Enhanced network performance by introducing small-world phenomenon using actor-critic reinforcement learning.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/phoenixrider12/Small-World-IoT-Networks" class="button">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1HTRFOVvWIN-C2Wldn28KJDyPwLPyEHQW/view" class="button">Report</a></li>
 											</ul>
 										</article>
 										<article>
