--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<h3>Pipe Traversal Robot</h3>
+											<p>16-DoF Quadruped trained using DDPG algorithm for movement in subterranean pipes environment.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1dcmFV0audPIdikB3NqbbBkgclz0oWHxY/view?usp=drive_link" class="button">Report</a></li>
 											</ul>
 										</article>
 									</div>
