--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
 												<li><a href="https://drive.google.com/file/d/1dcmFV0audPIdikB3NqbbBkgclz0oWHxY/view?usp=drive_link" class="button">Report</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Thermal Image Colorization</h3>
+											<p>Infrared to RGB coversion using Pix-to-Pix GAN algorithm.</p>
+											<ul class="actions">
+												<!-- <li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button">Code</a></li> -->
+												<li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 						</div>
