--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@
 												<li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Handwritten CAPTCH Recognition</h3>
+											<p>Detection and recognition of handwritten captchas made of alphabets and emojis.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/phoenixrider12/Hand-Written-CAPTCHA-Recognition" class="button">Code</a></li>
+												<!-- <li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li> -->
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Automated Traffic Control System</h3>
+											<p>IoT-based solution for reducing road accidents and enhancing peoples' safety.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/phoenixrider12/Automated-Traffic-Control-System" class="button">Code</a></li>
+												<!-- <li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li> -->
+											</ul>
+										</article>
 									</div>
 								</section>
 						</div>
