--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											<p>IoT-based solution for reducing road accidents and enhancing peoples' safety.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/phoenixrider12/Automated-Traffic-Control-System" class="button">Code</a></li>
-												<!-- <li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li> -->
+												<li><a href="https://docs.google.com/presentation/d/1JJ--6UHFh02VZ0OyQScio4vEjmKr1QLc/edit?usp=sharing&ouid=110229048173610613882&rtpof=true&sd=true" class="button">Report</a></li>
 											</ul>
 										</article>
 									</div>
