--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Handwritten CAPTCH Recognition</h3>
+											<h3>Handwritten CAPTCHA Recognition</h3>
 											<p>Detection and recognition of handwritten captchas made of alphabets and emojis.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/phoenixrider12/Hand-Written-CAPTCHA-Recognition" class="button">Code</a></li>
