--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/traffic.jpg" alt="" /></a>
 											<h3>Automated Traffic Control System</h3>
 											<p>IoT-based solution for reducing road accidents and enhancing peoples' safety.</p>
 											<ul class="actions">
