--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/mosaic.png" alt="" /></a>
 											<h3>Handwritten CAPTCHA Recognition</h3>
 											<p>Detection and recognition of handwritten captchas made of alphabets and emojis.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/phoenixrider12/Hand-Written-CAPTCHA-Recognition" class="button">Code</a></li>
-												<!-- <li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li> -->
+												<li><a href="#" class="button">Report</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/traffic.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/xiota.png" alt="" /></a>
 											<h3>Automated Traffic Control System</h3>
 											<p>IoT-based solution for reducing road accidents and enhancing peoples' safety.</p>
 											<ul class="actions">
