--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</section>
 
 							<!-- Section -->
-								<section>
+								<section id="projects">
 									<header class="major">
 										<h2>Projects</h2>
 									</header>
@@ -175,7 +175,7 @@
 									<ul>
 										<li><a href="#">Homepage</a></li>
 										<li><a href="#">News</a></li>
-										<li><a href="#">Projects</a></li>
+										<li><a href="#projects">Projects</a></li>
 										<li><a href="#">Publications</a></li>
 										<!-- <li>
 											<span class="opener">Submenu</span>
