--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								</section>
 
 							<!-- Section -->
-								<section>
+								<section id="news">
 									<header class="major">
 										<h2>News</h2>
 									</header>
@@ -174,7 +174,7 @@
 									</header>
 									<ul>
 										<li><a href="#">Homepage</a></li>
-										<li><a href="#">News</a></li>
+										<li><a href="#news">News</a></li>
 										<li><a href="#projects">Projects</a></li>
 										<li><a href="#">Publications</a></li>
 										<!-- <li>
