--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="#">Homepage</a></li>
+										<li><a href="https://phoenixrider12.github.io/">Homepage</a></li>
 										<li><a href="#news">News</a></li>
 										<li><a href="#projects">Projects</a></li>
 										<li><a href="#">Publications</a></li>
