--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 											<h3>Thermal Image Colorization</h3>
 											<p>Infrared to RGB coversion using Pix-to-Pix GAN algorithm.</p>
 											<ul class="actions">
-												<!-- <li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button">Code</a></li> -->
+												<li><a href="#" class="button">Code</a></li>
 												<li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li>
 											</ul>
 										</article>
