--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/image2.jpeg"/>
+										<img src="images/image2_cropped.jpeg"/>
 									</span>
 								</section>
 
