modified profile pic

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_Sept2023.pdf" class="button big">C.V.</a></li>
 										</ul>
 									</div>
-									<span class="image object" style="width: 600px; height: 600px;">
+									<span class="image object" style="width: 580; height: 580;">
 										<img src="images/image2_cropped.jpeg"/>
 									</span>
 								</section>
