modified profile pic

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 										<h2>News</h2>
 									</header>
 										<ul>
-												<li>[May 2023] : Started Research Internship at SIA Lab, USC.</li>
-												<li>[Jan 2023] : Started Research Internship at Carleton University.</li>
-												<li>[Dec 2022] : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG</a>.</li>
-												<li>[May 2022] : Started Research Internship at RBCCPS, IISc.</li>
-												<li>[Mar 2022] : Started Research Internship at AISL, CWNU</li>
-												<li>[Dec 2021] : First Runner Up in AIITRA Robotics Challenge</li>
-												<li>[Nov 2020] : Started B.Tech in Electronics Engineering at IIT BHU</li>
+												<li><b>[May 2023]</b> : Started Research Internship at SIA Lab, USC.</li>
+												<li><b>[Jan 2023]</b> : Started Research Internship at Carleton University.</li>
+												<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG</a>.</li>
+												<li><b>[May 2022]</b> : Started Research Internship at RBCCPS, IISc.</li>
+												<li><b>[Mar 2022]</b> : Started Research Internship at AISL, CWNU</li>
+												<li><b>[Dec 2021]</b> : First Runner Up in AIITRA Robotics Challenge</li>
+												<li><b>[Nov 2020]</b> : Started B.Tech in Electronics Engineering at IIT BHU</li>
 										</ul>
 								</section>
 
