--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 								</section>
 
 							<!-- Section -->
+							<section id="publications">
+								<header class="major">
+									<h2>Publications</h2>
+								</header>
+
+								<h3> Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers </h3>
+								<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
+
+							<!-- Section -->
 								<section id="projects">
 									<header class="major">
 										<h2>Projects</h2>
