--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_Sept2023.pdf" class="button big">C.V.</a></li>
 										</ul>
 									</div>
-									<span class="image object" style="width: 550px; height: 550px;">
-										<img src="images/image2_cropped.jpeg"/>
+									<span class="image object" style="width: 560px; height: 560px;">
+										<img src="images/image.jpeg"/>
 									</span>
 								</section>
 
@@ -71,8 +71,11 @@
 								</header>
 
 								<h3> Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers </h3>
+								Capturing system-level failures of vision-based controllers and mitigting them using fallback mechanisms for ensuring safety in autonomous systems.
 								<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
 
+							</section>
+							
 							<!-- Section -->
 								<section id="projects">
 									<header class="major">
