--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
 								<h3> Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers </h3>
 								Capturing system-level failures of vision-based controllers and mitigting them using fallback mechanisms for ensuring safety in autonomous systems.
 								<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
+								<ul class="actions">
+									<li><a href="" class="button small">Website</a></li>
+									<li><a href="" class="button small">PDF</a></li>
+									<li><a href="" class="button small">Video</a></li>
+									<li><a href="" class="button small">Code</a></li>
+								</ul>
 
 							</section>
 							
