--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
 									<li><a href="" class="button small">Code</a></li>
 								</ul>
 
+								<div class="icra_image">
+									<img src="images/icra.png" />
+								</div>
+
 							</section>
 							
 							<!-- Section -->
