--- a/index.html
+++ b/index.html
@@ -66,22 +66,29 @@
 
 							<!-- Section -->
 							<section id="publications">
-								<header class="major">
-									<h2>Publications</h2>
-								</header>
-
-								<h3> Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers </h3>
-								Capturing system-level failures of vision-based controllers and mitigting them using fallback mechanisms for ensuring safety in autonomous systems.
-								<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
-								<ul class="actions">
-									<li><a href="" class="button small">Website</a></li>
-									<li><a href="" class="button small">PDF</a></li>
-									<li><a href="" class="button small">Video</a></li>
-									<li><a href="" class="button small">Code</a></li>
-								</ul>
-
 								<div class="icra_image">
-									<img src="images/icra.png" />
+									<div>
+
+										<header class="major">
+											<h2>Publications</h2>
+										</header>
+										
+										<h3> Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers </h3>
+										<!-- Capturing system-level failures of vision-based controllers and mitigting them using fallback mechanisms for ensuring safety in autonomous systems. -->
+										<!-- <p></p> -->
+										<p>
+											<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
+										</p>
+										<ul class="actions">
+											<li><a href="" class="button small">Website</a></li>
+											<li><a href="" class="button small">PDF</a></li>
+											<li><a href="" class="button small">Video</a></li>
+											<li><a href="" class="button small">Code</a></li>
+										</ul>
+									</div>
+									<div>
+										<img src="images/icra.png" />
+									</div>
 								</div>
 
 							</section>
