--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_Sept2023.pdf" class="button big">C.V.</a></li>
 										</ul>
 									</div>
-									<span class="image object" style="width: 550px; height: 550px;">
+									<span class="image object" style="width: 45%; height: 45%;">
 										<img src="images/image.jpeg"/>
 									</span>
 								</section>
