--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/aiitra.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/aiitra.png" alt=""/></a>
 											<h3>Multi-Agent Warehouse Cleaning</h3>
 											<p>Efficient coverage and cleaning of unknown terrains using multiple ground robots.</p>
 											<ul class="actions">
@@ -110,7 +110,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/drona.png" alt="" /></a>
 											<h3>UAV Control and Swarming</h3>
 											<p>Cascaded PID-based control and swarm motion of drones.</p>
 											<ul class="actions">
@@ -128,7 +128,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/btp.png" alt="" /></a>
 											<h3>Small World IoT Networks</h3>
 											<p>Enhanced network performance by introducing small-world phenomenon using actor-critic reinforcement learning.</p>
 											<ul class="actions">
