--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/tic.png" alt="" /></a>
 											<h3>Thermal Image Colorization</h3>
 											<p>Infrared to RGB coversion using Pix-to-Pix GAN algorithm.</p>
 											<ul class="actions">
