creating icra paper website

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 											<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
 										</p>
 										<ul class="actions">
-											<li><a href="" class="button small">Website</a></li>
-											<li><a href="" class="button small">PDF</a></li>
+											<li><a href="failure_mitigation.html" class="button small">Website</a></li>
+											<li><a href="assets/failure_mitigation_arxiv.pdf" class="button small">PDF</a></li>
 											<li><a href="" class="button small">Video</a></li>
 											<li><a href="" class="button small">Code</a></li>
 										</ul>
