--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 										<ul class="actions">
 											<li><a href="failure_mitigation.html" class="button small">Website</a></li>
 											<li><a href="assets/failure_mitigation_arxiv.pdf" class="button small">PDF</a></li>
-											<li><a href="" class="button small">Video</a></li>
-											<li><a href="" class="button small">Code</a></li>
+											<li><a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" class="button small">Video</a></li>
+											<li><a href="https://github.com/phoenixrider12/visual_failure_mitigation" class="button small">Code</a></li>
 										</ul>
 									</div>
 									<div>
