--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/aiitra.png" alt=""/></a>
+											<a href="#" class="image"><img src="images/aiitra2.png" alt=""/></a>
 											<h3>Multi-Agent Warehouse Cleaning</h3>
 											<p>Efficient coverage and cleaning of unknown terrains using multiple ground robots.</p>
 											<ul class="actions">
@@ -119,7 +119,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/mphb.gif" alt="" /></a>
 											<h3>Multi-Purpose Household Robot</h3>
 											<p>Fabricated a ground robot to perform household chores and baby care.</p>
 											<ul class="actions">
@@ -137,7 +137,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/uav_ugv.gif" alt="" /></a>
 											<h3>UAV Guided UGV Navigation</h3>
 											<p>UAV aided mapping and localization for a UGV to autonomously traverse in mountainous terrains.</p>
 											<ul class="actions">
@@ -146,7 +146,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ptb.png" alt="" /></a>
 											<h3>Pipe Traversal Robot</h3>
 											<p>16-DoF Quadruped trained using DDPG algorithm for movement in subterranean pipes environment.</p>
 											<ul class="actions">
