adding arxiv link

--- a/failure_mitigation.html
+++ b/failure_mitigation.html
@@ -205,14 +205,10 @@
             <table align=center width=650>
              <center><h1>Paper</h1></center>
                 <tr>
-                    <!--<td width=300px align=left>-->
-                    <!-- <a href="http://arxiv.org/pdf/1603.08511.pdf"> -->
-                  <!-- <td><a href="#"><img class="layered-paper-big" style="height:175px" src="./resources/images/paper.png"/></a></td> -->
-                  <td><a href="assets/failure_mitigation_arxiv.pdf"><img style="height:280px" src="images/icra_paper_preview.png"/></a></td>
+                  <td><a href="https://arxiv.org/pdf/2309.13475.pdf"><img style="height:280px" src="images/icra_paper_preview.png"/></a></td>
                   <td><span style="font-size:14pt">Gupta, Chakraborty, Bansal<br><br>
                     Detecting and Mitigating System-Level Anomalies of Vision-Based
                     Controllers
-                  <!-- [hosted on <a href="#">arXiv</a>]</a> -->
                     </td>
               </tr>
             </table>
@@ -221,7 +217,7 @@
           <table align=center width=180px>
               <tr>
                   <td><span style="font-size:14pt"><center>
-                      <a href="assets/failure_mitigation_arxiv.pdf">[pdf]</a>
+                      <a href="https://arxiv.org/pdf/2309.13475.pdf">[pdf]</a>
                     </center></td>
 
                   <td><span style="font-size:14pt"><center>
