--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 										<h2>News</h2>
 									</header>
 										<ul>
+												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system failures in visual controllers in out on arxiv.</li>
 												<li><b>[May 2023]</b> : Started Research Internship at SIA Lab, USC.</li>
 												<li><b>[Jan 2023]</b> : Started Research Internship at Carleton University.</li>
 												<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG</a>.</li>
@@ -82,7 +83,7 @@
 										</p>
 										<ul class="actions">
 											<li><a href="failure_mitigation.html" class="button small">Website</a></li>
-											<li><a href="assets/failure_mitigation_arxiv.pdf" class="button small">PDF</a></li>
+											<li><a href="https://arxiv.org/pdf/2309.13475.pdf" class="button small">PDF</a></li>
 											<li><a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" class="button small">Video</a></li>
 											<li><a href="https://github.com/phoenixrider12/visual_failure_mitigation" class="button small">Code</a></li>
 										</ul>
