completing failure mitigation webpage by adding videos

--- a/failure_mitigation.html
+++ b/failure_mitigation.html
@@ -276,24 +276,27 @@
               </tr>
           </table>
           <br>
-          <!-- <table align=center width=900px>
+          <table align=center width=900px>
               <tr>
                   <td width=600px>
                     <center>
-                        <a href="./resources/images/velocity_profile.png"><img src = "./resources/images/velocity_profile.png" height="220px"></img></href></a><br>
-                  </center>
+                      <iframe width="373" height="210" src="https://www.youtube.com/embed/EjH_W6Oo4rM?si=NxP6Gx0tQuDQjm2J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="373" height="210" src="https://www.youtube.com/embed/MASHyUbm6Fk?si=Ybxur4DDIGG2-aHG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <br>
+                      <iframe width="373" height="210" src="https://www.youtube.com/embed/Z3WXZYLjZY8?si=OVHny9Ra2lXhSkCn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="373" height="210" src="https://www.youtube.com/embed/kPuagt7_aFE?si=iHd7V4SD4WZJzVL_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </center>
                   </td>
               </tr>
                   <td width=600px>
                     <center>
-                        <span style="font-size:14px"><i> <span style="font-weight:bold">Control Profiles</span> The proposed method produces significantly smoother control profiles than the end-to-end method which are much easier to track on a real physical system. The jerky profiles learned by the end-to-end method could lead to increased probability of hardware failure on a real system as well. Additionally, these jerky control profiles would lead to dramatically increased power usage and thus decreased battery life.</i>
+                        <span style="font-size:14px"><i> <span style="font-weight:bold"></span> <b>(Top)</b> TaxiNet controller failure due to starting close to runway boundary(left), Trajectory correction by our safety pipeline (right), <b>(Bottom)</b> TaxiNet controller failure due to white runway markings (left), Trajectory correction by our safety pipeline (right).</i>
                   </center>
                   </td>
               </tr>
           </table>
-          <br> -->
-
-
+          <br>
+          
            <hr>
 
             <table align=center width=1100px>
