--- a/failure_mitigation.html
+++ b/failure_mitigation.html
@@ -290,7 +290,7 @@
               </tr>
                   <td width=600px>
                     <center>
-                        <span style="font-size:14px"><i> <span style="font-weight:bold"></span> <b>(Top)</b> TaxiNet controller failure due to starting close to runway boundary(left), Trajectory correction by our safety pipeline (right), <b>(Bottom)</b> TaxiNet controller failure due to white runway markings (left), Trajectory correction by our safety pipeline (right).</i>
+                        <span style="font-size:14px"><i> <span style="font-weight:bold"></span> <b>(Top)</b> TaxiNet controller failure due to starting close to runway boundary(left), Trajectory correction by our safety pipeline (right),<br><b>(Bottom)</b> TaxiNet controller failure due to white runway markings (left), Trajectory correction by our safety pipeline (right).</i>
                   </center>
                   </td>
               </tr>
