added google scholar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 									<ul class="icons">
 										<li><a href="https://github.com/phoenixrider12" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="https://www.linkedin.com/in/aryaman1210/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<!-- <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 									</ul>
 								</header>
 
@@ -42,6 +41,7 @@
 										<p>I've previously worked at <a href="https://cps.iisc.ac.in/">Robert Bosch Center for Cyber Physical Systems</a> under <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>. I've also worked at Changwon National University under <a href="http://islab.cwnu.ac.kr/professor.htm">Dr. Oh-Seol Kwon</a> on <i>Joint Super-Resolution and Object Detection</i>.</p>
 										<ul class="actions">
 											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_Sept2023.pdf" class="button big">C.V.</a></li>
+											<li><a href="https://scholar.google.com/citations?user=AWhTyqwAAAAJ&hl=en&oi=ao" class="button big">Google Scholar</a></li>
 										</ul>
 									</div>
 									<span class="image object" style="width: 45%; height: 45%;">
